[gd_scene load_steps=11 format=2]

[ext_resource path="res://Scenes/Enemies/wolf.gd" type="Script" id=1]
[ext_resource path="res://Assets/Enemies/Wolf/Wolf.png" type="Texture" id=2]
[ext_resource path="res://UI/Art/HPbar.jpg" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 12.6695, 12.9099 )

[sub_resource type="Animation" id=2]
resource_name = "Death_down"
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Unit:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.75, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 12, 13, 14, 15, 16, 17 ]
}

[sub_resource type="Animation" id=3]
resource_name = "Death_side"
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Unit:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.75, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 48, 49, 50, 51, 52, 53 ]
}

[sub_resource type="Animation" id=4]
resource_name = "Death_up"
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Unit:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.35, 0.55, 0.75, 0.95 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 18, 19, 20, 21, 22, 23 ]
}

[sub_resource type="Animation" id=5]
resource_name = "Walk_down"
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Unit:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.35, 0.55, 0.75, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 24, 25, 26, 27, 28, 29 ]
}

[sub_resource type="Animation" id=6]
resource_name = "Walk_side"
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Unit:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.35, 0.55, 0.75, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 60, 61, 62, 63, 64, 65 ]
}

[sub_resource type="Animation" id=7]
resource_name = "Walk_up"
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Unit:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.35, 0.55, 0.75, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 30, 31, 32, 33, 34, 35 ]
}

[node name="Wolf_enemy_follow_path" type="PathFollow2D" groups=[
"enemies",
]]
rotate = false
loop = false
script = ExtResource( 1 )

[node name="wolf_enemy_body" type="KinematicBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="wolf_enemy_body"]
position = Vector2( 0, 3.18198 )
shape = SubResource( 1 )

[node name="Unit" type="Sprite" parent="wolf_enemy_body"]
texture = ExtResource( 2 )
hframes = 12
vframes = 6
frame = 12

[node name="UnitAnimation" type="AnimationPlayer" parent="wolf_enemy_body"]
anims/Death_down = SubResource( 2 )
anims/Death_side = SubResource( 3 )
anims/Death_up = SubResource( 4 )
anims/Walk_down = SubResource( 5 )
anims/Walk_side = SubResource( 6 )
anims/Walk_up = SubResource( 7 )

[node name="HealthBar" type="TextureProgress" parent="."]
margin_left = -19.0
margin_top = -19.0
margin_right = 19.0
margin_bottom = -13.0
value = 50.0
texture_under = ExtResource( 3 )
texture_progress = ExtResource( 3 )
tint_under = Color( 0.235294, 0.235294, 0.235294, 1 )
tint_progress = Color( 0.321569, 0.662745, 0.109804, 1 )
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="animation_finished" from="wolf_enemy_body/UnitAnimation" to="." method="_on_UnitAnimation_animation_finished"]
